<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/guild1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.constraint.Guideline
        android:id="@+id/guideline_h1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_h2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_h3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_h4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_v1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_v2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_v3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_c"
        style="@style/buttonStyle"
        android:background="@drawable/btn_lightgray"
        android:textColor="@android:color/black"
        android:text="@string/buttonTextAC"
        app:layout_constraintBottom_toTopOf="@id/guideline_h1"
        app:layout_constraintEnd_toStartOf="@id/guideline_v1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_inverse"
        style="@style/buttonStyle"
        android:background="@drawable/btn_lightgray"
        android:textColor="@android:color/black"
        android:text="@string/buttonTextInverse"
        app:layout_constraintBottom_toTopOf="@id/guideline_h1"
        app:layout_constraintEnd_toStartOf="@id/guideline_v2"
        app:layout_constraintStart_toStartOf="@id/guideline_v1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_percent"
        style="@style/buttonStyle"
        android:background="@drawable/btn_lightgray"
        android:textColor="@android:color/black"
        android:text="@string/buttonTextPercent"
        app:layout_constraintBottom_toTopOf="@id/guideline_h1"
        app:layout_constraintEnd_toStartOf="@id/guideline_v3"
        app:layout_constraintStart_toStartOf="@id/guideline_v2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_divide"
        style="@style/buttonStyle"
        android:background="@drawable/btn_orange"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/buttonTextDivide"
        app:layout_constraintBottom_toTopOf="@id/guideline_h1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_v3"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        style="@style/buttonStyle"
        android:background="@drawable/btn_darkgray"
        android:text="@string/buttonText7"
        app:layout_constraintBottom_toTopOf="@id/guideline_h2"
        app:layout_constraintEnd_toStartOf="@id/guideline_v1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_h1" />

    <Button
        android:id="@+id/button8"
        style="@style/buttonStyle"
        android:background="@drawable/btn_darkgray"
        android:text="@string/buttonText8"
        app:layout_constraintBottom_toTopOf="@id/guideline_h2"
        app:layout_constraintEnd_toStartOf="@id/guideline_v2"
        app:layout_constraintStart_toStartOf="@id/guideline_v1"
        app:layout_constraintTop_toTopOf="@id/guideline_h1" />

    <Button
        android:id="@+id/button9"
        style="@style/buttonStyle"
        android:background="@drawable/btn_darkgray"
        android:text="@string/buttonText9"
        app:layout_constraintBottom_toTopOf="@id/guideline_h2"
        app:layout_constraintEnd_toStartOf="@id/guideline_v3"
        app:layout_constraintStart_toStartOf="@id/guideline_v2"
        app:layout_constraintTop_toTopOf="@id/guideline_h1" />

    <Button
        android:id="@+id/button_multiple"
        style="@style/buttonStyle"
        android:background="@drawable/btn_orange"
        android:text="@string/buttonTextMultiple"
        app:layout_constraintBottom_toTopOf="@id/guideline_h2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_v3"
        app:layout_constraintTop_toTopOf="@id/guideline_h1" />

    <Button
        android:id="@+id/button4"
        style="@style/buttonStyle"
        android:background="@drawable/btn_darkgray"
        android:text="@string/buttonText4"
        app:layout_constraintBottom_toTopOf="@id/guideline_h3"
        app:layout_constraintEnd_toStartOf="@id/guideline_v1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_h2" />

    <Button
        android:id="@+id/button5"
        style="@style/buttonStyle"
        android:background="@drawable/btn_darkgray"
        android:text="@string/buttonText5"
        app:layout_constraintBottom_toTopOf="@id/guideline_h3"
        app:layout_constraintEnd_toStartOf="@id/guideline_v2"
        app:layout_constraintStart_toStartOf="@id/guideline_v1"
        app:layout_constraintTop_toTopOf="@id/guideline_h2" />

    <Button
        android:id="@+id/button6"
        style="@style/buttonStyle"
        android:background="@drawable/btn_darkgray"
        android:text="@string/buttonText6"
        app:layout_constraintBottom_toTopOf="@id/guideline_h3"
        app:layout_constraintEnd_toStartOf="@id/guideline_v3"
        app:layout_constraintStart_toStartOf="@id/guideline_v2"
        app:layout_constraintTop_toTopOf="@id/guideline_h2" />

    <Button
        android:id="@+id/button_minus"
        style="@style/buttonStyle"
        android:background="@drawable/btn_orange"
        android:text="@string/buttonTextMinus"
        app:layout_constraintBottom_toTopOf="@id/guideline_h3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_v3"
        app:layout_constraintTop_toTopOf="@id/guideline_h2" />

    <Button
        android:id="@+id/button1"
        style="@style/buttonStyle"
        android:background="@drawable/btn_darkgray"
        android:text="@string/buttonText1"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h4"
        app:layout_constraintEnd_toStartOf="@id/guideline_v1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_h3" />

    <Button
        android:id="@+id/button2"
        style="@style/buttonStyle"
        android:background="@drawable/btn_darkgray"
        android:text="@string/buttonText2"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h4"
        app:layout_constraintEnd_toStartOf="@id/guideline_v2"
        app:layout_constraintStart_toStartOf="@id/guideline_v1"
        app:layout_constraintTop_toTopOf="@id/guideline_h3" />

    <Button
        android:id="@+id/button3"
        style="@style/buttonStyle"
        android:background="@drawable/btn_darkgray"
        android:text="@string/buttonText3"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h4"
        app:layout_constraintEnd_toStartOf="@id/guideline_v3"
        app:layout_constraintStart_toStartOf="@id/guideline_v2"
        app:layout_constraintTop_toTopOf="@id/guideline_h3" />

    <Button
        android:id="@+id/button_add"
        style="@style/buttonStyle"
        android:background="@drawable/btn_orange"
        android:text="@string/buttonTextPlus"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_v3"
        app:layout_constraintTop_toTopOf="@id/guideline_h3" />

    <Button
        android:id="@+id/button0"
        style="@style/buttonStyle"
        android:background="@drawable/btn_rounded_darkgray"
        android:stateListAnimator="@null"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_v2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_h4" />

    <Button
        android:id="@+id/button_point"
        style="@style/buttonStyle"
        android:background="@drawable/btn_darkgray"
        android:text="@string/buttonTextPoint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_v3"
        app:layout_constraintStart_toStartOf="@id/guideline_v2"
        app:layout_constraintTop_toTopOf="@id/guideline_h4" />

    <Button
        android:id="@+id/button_equal"
        style="@style/buttonStyle"
        android:background="@drawable/btn_orange"
        android:text="@string/buttonTextEqual"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_v3"
        app:layout_constraintTop_toTopOf="@id/guideline_h4" />

    <TextView
        android:id="@+id/buttonText0"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:text="@string/buttonText0"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@id/button0"
        app:layout_constraintEnd_toStartOf="@id/guideline_v1"
        app:layout_constraintStart_toStartOf="parent"
        />

</android.support.constraint.ConstraintLayout>